Updated resources images

--- a/SM_Midterm_project_cleanup..ipynb
+++ b/SM_Midterm_project_cleanup..ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -194,7 +194,7 @@
        "7          41.0        6.6       129.0  Nintendo      E  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -349,7 +349,7 @@
        "9      NES           1984.0  Nintendo     26.93      0.63      0.28"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -536,7 +536,7 @@
        "[9840 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -563,15 +563,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -581,13 +572,13 @@
     "plt.title(\"NA Sales for Each Platform\")\n",
     "plt.xlabel(\"NA Sales\")\n",
     "plt.ylabel(\"Platform\")\n",
-    "plt.show()\n",
-    "plt.savefig('Resources/Platforms_NA_Sales')"
+    "plt.savefig('Resources/Platforms_NA_Sales')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -601,15 +592,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -619,13 +601,13 @@
     "plt.title(\"EU Sales for Each Platform\")\n",
     "plt.xlabel(\"Eu Sales\")\n",
     "plt.ylabel(\"Platform\")\n",
-    "plt.show()\n",
-    "plt.savefig('Resources/Platforms_EU_Sales')"
+    "plt.savefig('Resources/Platforms_EU_Sales')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -639,15 +621,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -657,8 +630,8 @@
     "plt.title(\"JP Sales for Each Platform\")\n",
     "plt.xlabel(\"JP Sales\")\n",
     "plt.ylabel(\"Platform\")\n",
-    "plt.show()\n",
-    "plt.savefig('Resources/Platforms_JP_Sales')"
+    "plt.savefig('Resources/Platforms_JP_Sales')\n",
+    "plt.show()"
    ]
   }
  ],
